Resources/Public/Backend/Css/Skin/backendpreviews.css
:root {
	--color-muted: #d0d0d0;
	--color-white: #fff;

	--coloricon-border-color: #333;

	/* Message colors, see TYPO3 */
	--color-error: #c83c3c;
	--color-warning: #e8a33d; /* #ffc800; */

	--spacing-image: 10px;
	--spacing-warning: 10px;
	--spacing-caption: 5px;
	--tiles-width-default: 300px;
	--tiles-width-small: 200px;
	--tiles-width-big: 450x;
	--opacity-hidden: 0.5;
}

[class$="--hidden"],
[class*="--hidden "] {
	opacity: var(--opacity-hidden);
}

.b_title {
	font-weight: bold;
}

.b_label {
	font-weight: bold;
}

.b_subheader {
	font-style: italic;
}

.b_content > *:last-child {
	margin-bottom: 0;
}

.b_image {
	margin-inline-end: var(--spacing-image);
	margin-top: var(--spacing-image);
}

.b_tiles {
	width: var(--tiles-width-default);
	display: inline-block;
	vertical-align: top;
}

.b_tiles--small {
	width: var(--tiles-width-small);
}

.b_tiles--big {
	width: var(--tiles-width-big);
}

.b_tiles__text {
	margin-top: var(--spacing-caption);
}

.b_html {
	color: var(--color-muted);
}

.b_warning {
	margin-top: var(--spacing-warning);
	background-color: var(--color-warning);
	color: var(--color-white);
	padding: 3px;
}

.b_warning--error {
	background-color: var(--color-error);
}

.b_warning__title {
	font-weight: bold;
}
.b_warning__title::after {
	content: ":";
}

.b_ul {
	padding-inline-start: 1.5em;
	margin-bottom: 0;
}

.b_images + .b_ul {
	var(--spacing-image);
}

.b_listgroup {
	margin-top: 10px;
}

.b_listgroup:first-child:last-child {
	margin-top: 0;
}

.b_coloricon {
	height: 15px;
	display: inline-block;
	border: 1px solid var(--coloricon-border-color);
	background: var(--color-muted);
	top: 3px;
	position: relative;
	width: 15px;
}

